0x01-variables_if_else_while/0-positive_or_negative.c:
 
sitive_or_negative.c:26:28: error: expected ‘)’ before ‘;’ token
   26 |    printf("%d is zero\n", n;
      |                            ^
      |                            )
0-positive_or_negative.c:26:29: error: expected ‘;’ before ‘}’ token
   26 |    printf("%d is zero\n", n;
      |                             ^
      |                             ;
   27 |      }
      |      ~                       

